@@ -1,3 +1,8 @@
+2012-09-23 Sun  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh (CygbuildInstallExtraManualList): New. Add
+	CYGWIN-PATCHES/manpages support.
+
 2012-09-22 Sun  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckBinFiles): Improve
